# dpm

./: .gitignore  CLAUDE.md  LICENSE  annotations.md  pyproject.toml  pyrightconfig.json  pytest.ini  tap_notes.md  todo.org
example_dbs/: cmdr_proj.db  config.json  dpm_proj.db  move_proj.db
scripts/: prep_config.py  server.py
src/dpm/: taxons.py
src/dpm/fastapi/: ops.py  server.py
src/dpm/fastapi/dpm/: api_router.py  ui_crud_router.py  ui_kanban_router.py  ui_router.py
src/dpm/fastapi/dpm/templates/: pm_base.html  pm_domain.html  pm_domains.html  pm_domains_tree.html  pm_form_result.html  pm_kanban_board.html  pm_kanban_card.html  pm_kanban_columns.html  pm_kanban_message.html  pm_nav_project_children.html  pm_nav_projects.html  pm_nav_tasks.html  pm_nav_tree.html  pm_phase.html  pm_phase_create.html  pm_phase_delete.html  pm_phase_edit.html  pm_phase_edit_modal.html  pm_project.html  pm_project_children.html  pm_project_create.html  pm_project_delete.html  pm_project_edit.html  (+11 more)
src/dpm/fastapi/shared/: ui_router.py
src/dpm/fastapi/standalone/: api_router.py  ui_router.py
src/dpm/fastapi/sw/: ui_kanban_router.py  ui_router.py
src/dpm/store/: domains.py  models.py  sw_models.py  sw_wrappers.py  taxons.py  wrappers.py
src/vboss/fastapi/: server.py
src/vboss/fastapi/shared/: api_router.py  ui_router.py
src/vboss/store/: task_db.py
tests/: test_1.py  test_api.py  test_api_main.py  test_domains.py  test_kboard.py  test_models.py  test_overlay.py  test_sw_domain.py  test_sw_kanban.py  test_sw_ui.py  test_taxons.py  test_top_error.py  test_ui_main.py
(+38 files in other folders)
