[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dpm"]

[project]
name = "dpm"
version = "0.1.0"
description = "Research project for voice controlled UI for project tool"
requires-python = ">=3.12"
authors = [
    { name = "Dennis Parker", email = "dennis@windhavengroup.com" }
]

dependencies = [
    "fastapi>=0.128.0",
    "jinja2>=3.1.6",
    "jinja2-fragments>=1.11.0",
    "sqlmodel>=0.0.31",
    "uvicorn>=0.40.0",
]
[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "ipdb>=0.13.13",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.25.2",
    "pytest-cov>=7.0.0",
]
